just some adjustments!

--- a/squareWaveFourierSeries_Plot.ipynb
+++ b/squareWaveFourierSeries_Plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
     "y = np.zeros(N) + 1\n",
     "\n",
     "p = 0\n",
-    "while p < N:\n",
+    "while p < N:# Step function\n",
     "    y[p*400: 200 + p*400] = -1\n",
     "    p += 1\n",
     "\n",
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6489,16 +6489,14 @@
     }
    ],
    "source": [
-    "n = 15\n",
+    "n = 15 #number of harmonics\n",
     "omega = 2*np.pi/4\n",
     "j = 1\n",
-    "#fourier = 4*np.sin(j*omega*x)/(j*np.pi)\n",
-    "fourier = np.zeros(len(x))\n",
+    "fourier = np.zeros(N) # initialization of fourier series\n",
     "\n",
     "\n",
     "\n",
     "for j in range(1, n, 2):\n",
-    "    #j = 1\n",
     "    print('wave number ', j)\n",
     "    lastWave = 4*np.sin(j*omega*x)/(j*np.pi)\n",
     "    fourier = fourier + lastWave\n",
@@ -6510,26 +6508,6 @@
     "    plt.grid()\n",
     "    plt.show()\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n"
    ]
   },
   {
